--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -39,8 +39,5 @@ models:
   my_new_project:
     # Applies to all files under models/example/
     #example:
-      #+materialized: table
+      materialized: view
 
-#seeds:
-	#+database: "ALUMNO21_DEV_BRONZE_DB"
-	#+schema: "SEEDS"
