--- a/models/staging/sql_server_dbo/_sql_server_dbo_sources.yml
+++ b/models/staging/sql_server_dbo/_sql_server_dbo_sources.yml
@@ -1,105 +1,93 @@
 version: 2
 
 sources:
-
-  - name: sql_server_dbo # name of the source 
-    schema: sql_server_dbo # this is the schema our raw data lives in
-    database: ALUMNO21_DEV_BRONZE_DB # this is the name of our database
-
-    quoting:
-      database: false
-      schema: false
-      identifier: false
-
-    freshness:
-      warn_after: {count: 24, period: hour}
-      error_after: {count: 1000, period: day}
-
+  - name: sql_server_dbo
+    description: ""
     tables:
-
-      - name: ADDRESSES
-        loaded_at_field: _FIVETRAN_SYNCED
+      - name: addresses
+        description: ""
         columns:
-          - name: ADDRESS_ID
-          - name: ZIPCODE
-          - name: COUNTRY
-          - name: ADDRESS
-          - name: STATE
-          - name: _FIVETRAN_DELETED
-          - name: _FIVETRAN_SYNCED
+          - name: address_id
+          - name: zipcode
+          - name: country
+          - name: address
+          - name: state
+          - name: _fivetran_deleted
+          - name: _fivetran_synced #as date_load
 
-      - name: EVENTS
-        loaded_at_field: _FIVETRAN_SYNCED
+      - name: events
+        description: ""
         columns:
-          - name: EVENT_ID
-          - name: PAGE_URL
-          - name: EVENT_TYPE
-          - name: USER_ID
-          - name: PRODUCT_ID
-          - name: SESSION_ID
-          - name: CREATED_AT
-          - name: ORDER_ID
-          - name: _FIVETRAN_DELETED
-          - name: _FIVETRAN_SYNCED
+           - name: event_id
+           - name: page_url
+           - name: event_type
+           - name: user_id
+           - name: product_id
+           - name: session_id
+           - name: created_at
+           - name: order_id
+           - name: _fivetran_deleted
+           - name: _fivetran_synced #as date_load
 
-      - name: ORDERS
-        loaded_at_field: _FIVETRAN_SYNCED
+      - name: orders
+        description: ""
         columns:
-          - name: ORDER_ID
-          - name: SHIPPING_SERVICE
-          - name: SHIPPING_COST
-          - name: ADDRESS_ID
-          - name: CREATED_AT
-          - name: PROMO_ID
-          - name: ESTIMATED_DELIVERY_AT
-          - name: ORDER_COST
-          - name: USER_ID
-          - name: ORDER_TOTAL
-          - name: DELIVERED_AT
-          - name: TRACKING_ID
-          - name: STATUS
-          - name: _FIVETRAN_DELETED
-          - name: _FIVETRAN_SYNCED
+          - name: order_id
+          - name: shipping_service
+          - name: shipping_cost
+          - name: address_id
+          - name: created_at
+          - name: promo_id
+          - name: estimated_delivery_at
+          - name: order_cost
+          - name: user_id
+          - name: order_total
+          - name: delivered_at
+          - name: tracking_id
+          - name: status
+          - name: _fivetran_deleted
+          - name: _fivetran_synced
 
-      - name: ORDER_ITEMS
-        loaded_at_field: _FIVETRAN_SYNCED
+      - name: order_items
+        description: ""
         columns:
-          - name: ORDER_ID
-          - name: PRODUCT_ID
-          - name: QUANTITY
-          - name: _FIVETRAN_DELETED
-          - name: _FIVETRAN_SYNCED
+          - name: order_id
+          - name: product_id
+          - name: quantity
+          - name: _fivetran_deleted
+          - name: _fivetran_synced
 
-      - name: PRODUCTS
-        loaded_at_field: _FIVETRAN_SYNCED
+      - name: products
+        description: ""
         columns:
-          - name: PRODUCT_ID
-          - name: PRICE
-          - name: NAME
-          - name: INVENTORY
-          - name: _FIVETRAN_DELETED
-          - name: _FIVETRAN_SYNCED
+          - name: product_id
+          - name: price
+          - name: name
+          - name: inventory
+          - name: _fivetran_deleted
+          - name: _fivetran_synced
 
-      - name: PROMOS
-        loaded_at_field: _FIVETRAN_SYNCED
+      - name: promos
+        description: ""
         columns:
-          - name: PROMO_ID
-          - name: DISCOUNT
-          - name: STATUS
-          - name: _FIVETRAN_DELETED
-          - name: _FIVETRAN_SYNCED
+          - name: promo_id
+          - name: discount
+          - name: status
+          - name: _fivetran_deleted
+          - name: _fivetran_synced
 
-      - name: USERS
-        loaded_at_field: _FIVETRAN_SYNCED
+      - name: users
+        description: ""
         columns:
-          - name: USER_ID
-          - name: UPDATED_AT
-          - name: ADDRESS_ID
-          - name: LAST_NAME
-          - name: CREATED_AT
-          - name: PHONE_NUMBER
-          - name: TOTAL_ORDERS
-          - name: FIRST_NAME
-          - name: EMAIL
-          - name: _FIVETRAN_DELETED
-          - name: _FIVETRAN_SYNCED
+          - name: user_id
+          - name: updated_at
+          - name: address_id
+          - name: last_name
+          - name: created_at
+          - name: phone_number
+          - name: total_orders
+          - name: first_name
+          - name: email
+          - name: _fivetran_deleted
+          - name: _fivetran_synced
+
