--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -37,6 +37,9 @@ clean-targets:         # directories to be removed by `dbt clean`
 
 models:
   my_new_project:
+    staging: 
+      sql_server_dbo:
+        +database: ALUMNO21_DEV_SILVER_DB
     # Applies to all files under models/example/
     #example:
       materialized: view
