--- a/models/staging/sql_server_dbo/_sql_server_dbo__models.yml
+++ b/models/staging/sql_server_dbo/_sql_server_dbo__models.yml
@@ -247,7 +247,7 @@ models:
         data_type: number
         description: ""
 
-      - name: first_name
+      - name: nombre
         data_type: varchar
         description: ""
 
