--- a/models/staging/sql_server_dbo/_sql_server_dbo_sources.yml
+++ b/models/staging/sql_server_dbo/_sql_server_dbo_sources.yml
@@ -3,7 +3,7 @@ version: 2
 sources:
   - name: sql_server_dbo
     description: "Base de datos del negocio"
-    database: ALUMNO21_DEV_BRONZE_DB
+    database: "{{ env_var('DBT_ENVIRONMENTS') }}_BRONZE_DB"  # this is the name of our database
     tables:
       - name: addresses
         description: "Direccion de los clientes"
