--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -38,9 +38,21 @@ clean-targets:         # directories to be removed by `dbt clean`
 models:
   my_new_project:
     staging: 
-      sql_server_dbo:
-        +database: ALUMNO21_DEV_SILVER_DB
-    # Applies to all files under models/example/
-    #example:
-      materialized: view
+          staging:
+            +materialized: view
+            +database: "{{ env_var('DBT_ENVIRONMENTS') }}_SILVER_DB"
+            google_sheets:
+              +schema: google_sheets
+            sql_server_dbo:
+              +schema: sql_server_dbo
+            
+          marts:
+            +materialized: table
+            +database: "{{ env_var('DBT_ENVIRONMENTS') }}_GOLD_DB"
+            core:
+              +schema: core
+# materialized: view
+
+vars:
+  fecha: '2025-05-08'
 
