--- a/models/staging/sql_server_dbo/sql_server_dbo_sources.yml
+++ b/models/staging/sql_server_dbo/sql_server_dbo_sources.yml
@@ -92,7 +92,7 @@ sources:
           - name: promo_id
           - name: estimated_delivery_at
           - name: order_cost
-          - name: user_id
+          - name: user_id # no hacerle unique
           - name: order_total
           - name: delivered_at
           - name: tracking_id
